static/css/base.css
/* Root variables & imports */
@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');

:root {
    
    /* Typography */
    --logo-text: 'Lobster', cursive;

    /* Color Palette */
    /* primary colours */
    --ivory: rgb(255, 255, 240);
    --black: rgb(0,0,0);
    --off-black: rgb(65,74,76);
    --off-gold: rgb(238,204,102);  /* HEX value #EECC66 */

    /* button and icons */
    --silver: rgb(187, 194, 204);
    --bronze: rgb(205, 127, 50);
    --purple: rgb(116, 116, 219);  /*- used for platinum backgrounds */
    --green: rgb(25, 135, 84);     /* HEX value #198754 */
    --transp: rgba(0,0,0,0);
}

html {
    height: 100%;
}

body {
    color:var(--ivory);
    background-color: var(--black);
}


/*-- Text Classes --*/

.lg-txt {
    font-size:1.5rem;
}

.logo-txt {
    font-family: 'Lobster', cursive;
}

.ivory-txt {
    color:var(--ivory);
}

/* Gold textured mask */
.gold-special-txt {
    color:var(--off-gold); /*- backup font color if text mask fails -*/
    background: url('/media/gold-texture.jpg');
    background-size: cover;
    -webkit-text-fill-color: transparent;
    -webkit-background-clip: text;
    -moz-background-clip:text;
    background-clip:text;
}

/* standard gold text */
.gold-txt {
    color: var(--off-gold);
}

/* gold on hover txt */
.gold-accent-txt:hover,
.gold-accent-txt:focus,
.gold-accent-txt:active {
    color: var(--off-gold);
}

.gold-accent-outline:hover,
.gold-accent-outline:focus,
.gold-accent-outline:active {
    border: 3px solid var(--off-gold);
    color: var(--off-gold);
}

/*-- SVG Icons --------------------------------*/
.guitar-svg {
    height:3rem;
}

.add-black {
    display:none;
}

.btn-take:hover .add-black {
    display:inline;
}

.btn-take:hover .add-gold {
    display:none;
}


/*-----Nav Bar----------------------------------*/

.nav-banner {
    background: url('/media/Banner-img.jpeg') no-repeat center bottom fixed;
    background-size: cover;
    border-bottom: 5px solid transparent;
    /*--border-color: var(--off-gold);--*/
    border-image: url('/media/gold-texture.jpg') 30% stretch;
}

.navbar-logo {
    height:100%;
}

/* override default anchor tag style */ 
.nav-link, .dropdown-item, .dropdown-toggle {
    color:var(--ivory);
}

/* Override Bootstrap default nav background */   
.bg-dark {
    --bs-bg-opacity: 0;
}

.navbar-dark .navbar-nav .nav-link {
    color: var(--ivory);
}

.navbar-toggler-icon {
    background-color:var(--off-black);
    border: 1px solid var(--off-gold);
}

#main-nav-items .nav-link:focus, 
#main-nav-items .nav-link:hover, 
#main-nav-items .nav-link:active,
.nav-link:focus,
.nav-link:hover,
.nav-link:active { 
    color: var(--off-gold);
    font-weight: bold;
}

.dropdown-menu {
    background-color: var(--black);
    border: 2px solid var(--off-gold);
}

/*--Nav Media Queries (adjustable header container)-----------------------------*/

@media (max-width: 767px) {
    /* align nav dropdown items to left */
    .nav-link {
        text-align:left;
    }
}

/*- Header Container --*/
.header-container {
    padding-top:175px;
}

@media (min-width: 768px) {
    .header-container {
        padding-top:300px;
    }
}


/*--Buttons & Search Field ---------------------------------*/

.btn-search,
.search-input {
    border: 3px solid var(--ivory);
}

.search-input {
    background-color: var(--ivory);
}

.input-group {
    border: 3px solid var(--transp);
}



.btn-take {
    
    color:var(--off-gold);
}

.btn-take:hover {
    background-color:var(--off-gold);
}

.btn-add-fav {
    
    color:var(--green);
}

.btn-add-fav:hover {
    background-color:var(--green);
    color: var(--ivory);
}



/*----Footer----------------------------------*/



/*---Index.html-----*/

.main-content {

    min-height:20vh;
    text-align: center;
    border:2px solid var(--off-gold);
}

.carousel-item img {
    object-position: center;
    object-fit: cover;
    overflow: hidden;
    height:25vh;
}



/*----Guitar Card---------------------------------------------*/

.guitar-card {
    border: 3px solid var(--ivory);
    padding: 2px;
}

.guitar-card-list {
    background-color: var(--transp);
    line-height:0.75rem;   
}

.card-img-top {
    max-height: 35vh;
    display: block;
    object-fit: contain;
    aspect-ratio: 3 / 2;
    overflow: hidden;
    
}
.card-img-top> img {
    box-shadow: 0 0 8px 8px white inset;
}

.tp-text {
    font-weight:900;
}

.card-custom-overlay {
    position:absolute;
    top: 5%;
    right: 25%;
}

.tp-platinum {
    color: var(--purple);
    transform: translateY(1.5rem) scale(1,1.5);
}

.tp-gold {
    color:var(--off-gold);
}

.tp-silver {
    color:var(--silver);
}

.tp-bronze {
    color:var(--bronze);
}

/*--BUG FIX: Split columns were not applying central gutter, addressed with unique styling at medium breakpoint --*/
@media (min-width:768px) {
    .col-md-guttered {
        width: 48%; 
    }
    .col-md-gutter {
        width: 4%;
    }
}


/*--Guitar_Details.html -----------------------------------*/

.guitar-detail-image {
    
    display: block;
    object-fit: contain;
    aspect-ratio: 3 / 2;
    overflow: hidden;
}

.guitar-specs {
    border: 3px solid var(--off-gold);
}

@media (min-width:768px) and (max-width:991px){
    .guitar-details-container {
        margin-left:10px;
    }
}

/*----Subscription Card---------------------------------------------*/

.subs-card {
    border: 3px solid var(--ivory);
    text-shadow: -2px 2px var(--off-black);
   
    padding: 2px;
}

.plat-subs-card {
    background-color: var(--purple);
}

.gold-subs-card {
    background-color: var(--off-gold);
}

.silver-subs-card {
    background-color: var(--silver);
}

.bronze-subs-card {
    background-color: var(--bronze);
}

